# aflw

./: README.md
data/: GenTrainingList.py
doc/: README.txt
facedbsql/doc/: BioId_FaceTracer_PUT_Import_Howto.txt  LFPWImporterHowto
facedbsql/sample_scripts/: calc_cam_pose.sh  calc_ellipses.sh  calc_pose.sh  calc_rects.sh  calc_rects_violajones.sh  check_dup_feat_coords.m  find_duplicates.sh  import_bioid.sh  import_facetracer.sh  import_flickr.sh  import_put.sh  near_dups.sql  show_features.sh  test_merge.sh  unique_near_dups.sql
facedbsql/sample_scripts/lfpw/: deleter.py  imgfetchertest.py  imgfetchertrain.py  invalid.txt
facedbsql/src/: CMakeLists.txt
facedbsql/src/dbconn/: SQLiteDBConnection.cpp  SQLiteDBConnection.h
facedbsql/src/facedata/: AnnotationTypes.cpp  AnnotationTypes.h  FaceData.cpp  FaceData.h  FaceDbImage.cpp  FaceDbImage.h  FaceMetadata.cpp  FaceMetadata.h  FacePose.cpp  FacePose.h  FaceRect.cpp  FaceRect.h  FeatureCoordTypes.cpp  FeatureCoordTypes.h  FeaturesCoords.cpp  FeaturesCoords.h  Pose.cpp  Pose.h
facedbsql/src/facedbtool/: CamPoseCalculator.cpp  CamPoseCalculator.h  DBConsistencyChecker.cpp  DBConsistencyChecker.h  DBCreator.cpp  DBCreator.h  DBMerger.cpp  DBMerger.h  DupImageFinder.cpp  DupImageFinder.h  DuplicateFaceFinder.cpp  DuplicateFaceFinder.h  FaceEllipsesCalculator.cpp  FaceEllipsesCalculator.h  FaceFeaturesDisplay.cpp  FaceFeaturesDisplay.h  FacePoseCalculator.cpp  FacePoseCalculator.h  FaceRectCalculator.cpp  FaceRectCalculator.h  FaceRectViolaJonesCalculator.cpp  FaceRectViolaJonesCalculator.h  FaceStuffCalculator.cpp  FaceStuffCalculator.h  facedbtool_main.cpp
facedbsql/src/import/: BioIdFileReader.cpp  BioIdFileReader.h  CMUGTFilesReader.cpp  CMUGTFilesReader.h  CMUProfile_import.cpp  DeleteSqlEntries.cpp  DeleteSqlEntries.h  FaceTracerFileReader.cpp  FaceTracerFileReader.h  FeaturesFileReader.cpp  FeaturesFileReader.h  ImagesFromFolder.cpp  ImagesFromFolder.h  LFPWFilesReader.cpp  LFPWFilesReader.h  LFPW_import.cpp  MetaDataFileReader.cpp  MetaDataFileReader.h  PoseFileReader.cpp  PoseFileReader.h  PutFileReader.cpp  PutFileReader.h  bioid_import.cpp  facetracer_import.cpp  flickr_import.cpp  put_import.cpp
facedbsql/src/querys/: DeleteFacesByIdsQuery.cpp  DeleteFacesByIdsQuery.h  FaceDBQuery.cpp  FaceDBQuery.h  FaceDataByIDsQuery.cpp  FaceDataByIDsQuery.h  FaceIDByAnnotatedFeatureQuery.cpp  FaceIDByAnnotatedFeatureQuery.h  FaceIDByCamPoseQuery.cpp  FaceIDByCamPoseQuery.h  FaceIDByPoseQuery.cpp  FaceIDByPoseQuery.h  FaceIDQuery.cpp  FaceIDQuery.h  FaceIDsByImageQuery.cpp  FaceIDsByImageQuery.h  FaceRectsByFaceIDQuery.cpp  FaceRectsByFaceIDQuery.h  FacesWithPoseQuery.cpp  FacesWithPoseQuery.h  FileIDOfImagesWithFaces.cpp  FileIDOfImagesWithFaces.h  ImageByFaceIDQuery.cpp  ImageByFaceIDQuery.h  ImageByFileIDQuery.cpp  ImageByFileIDQuery.h  ImagesWithFacesQuery.cpp  ImagesWithFacesQuery.h
facedbsql/src/tests/: AnnotatedFeaturePatches.cpp  main.cpp  merge_test.cpp
facedbsql/src/util/: MeanFace3DModel.cpp  MeanFace3DModel.h  MeasureTime.h  ModernPosit.cpp  ModernPosit.h  StringUtil.cpp  StringUtil.h  utils.h
gui/src/: CMakeLists.txt  FeaturePointRadioButton.cpp  FeaturePointRadioButton.h  ImageViewer.cpp  ImageViewer.h  PoseEstimationAnnotationGui.aps  PoseEstimationAnnotationGui.rc  README.txt  classicPosit.m  compileModernPosit.bat  main.cpp  main_sqlite_test.cpp  main_test_app.cpp  main_window.cpp  main_window.h  modernPosit.m  pose_estimation_quarter_widget.cpp  pose_estimation_quarter_widget.h  qpixeltool.cpp  qpixeltool.h  utils.h
matlab/: calculateTransformation.m  createMeanFace3DModel.m  getFaceDataFromSQLite.m  main.m  modernPosit.m  rotateToPose.m  rotateToPoses.m  show3DModel.m  showRectFromDB.m
